--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ uncertainties = "^3.1.6"
 statsmodels = "^0.13.1"
 Sphinx = "^4.3.2"
 sphinx-rtd-theme = "^1.0.0"
+pysolar = "^0.10"
 
 [tool.poetry.dev-dependencies]
 
