--- a/diive/configs/filetypes/DIIVE_CSV_30MIN.yml
+++ b/diive/configs/filetypes/DIIVE_CSV_30MIN.yml
@@ -1,22 +1,22 @@
 GENERAL:
-  NAME: "DIIVE_CSV_30MIN"
-  DESCRIPTION: "Default DIIVE format with 2-row header (variable name, units) and 1-column full timestamp."
-  TAGS: [ "DIIVE" ]
+  NAME: "diive_CSV_30MIN"
+  DESCRIPTION: "Default DIIVE format with 1-row header (variable name) and 1-column full timestamp (middle)."
+  TAGS: [ "diive" ]
 
 FILE:
   EXTENSION: "*.diive.csv"
   COMPRESSION: "none"
 
 TIMESTAMP:
-  DESCRIPTION: "1 column with full timestamp with seconds"
+  DESCRIPTION: "1 column full timestamp with seconds, shows middle of time period."
   INDEX_COLUMN: [ 0 ]
   DATETIME_FORMAT: "%Y-%m-%d %H:%M:%S"
   SHOWS_START_MIDDLE_OR_END_OF_RECORD: "middle"
 
 DATA:
-  HEADER_SECTION_ROWS: [ 0, 1 ]
+  HEADER_SECTION_ROWS: [ 0 ]
   SKIP_ROWS: [ ]
-  HEADER_ROWS: [ 0, 1 ]
-  NA_VALUES: [ -9999 ]
+  HEADER_ROWS: [ 0 ]
+  NA_VALUES: [ -9999, nan, NaN, NAN, -6999, '-' ]
   FREQUENCY: "30T"
   DELIMITER: ","
