--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "diive"
-version = "0.31.0"
+version = "0.32.0"
 description = "Time series post-processing and analysis"
 authors = ["Lukas Hörtnagl <holukas@ethz.ch>"]
 
@@ -16,8 +16,10 @@ Sphinx = "^4.3.2"
 sphinx-rtd-theme = "^1.0.0"
 pysolar = "^0.10"
 scikit-learn = "^1.0.2"
+ThymeBoost = "^0.1.10"
 
 [tool.poetry.dev-dependencies]
+dbc-influxdb = { path = "../../22 - POET/dbc-influxdb", develop = true }
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
