--- a/diive/pkgs/qaqc/pipes_meteo.yaml
+++ b/diive/pkgs/qaqc/pipes_meteo.yaml
@@ -24,7 +24,7 @@ G:
     absolute_limits: [ -100, 100 ]
 
 LW:
-  LW_IN_:s
+  LW_IN_:
     pipe: [ remove_highres_outliers_absolute_limits ]
     units: W m-2
     absolute_limits: [ 50, 600 ]
@@ -32,8 +32,8 @@ LW:
 PA:
   PA_:
     pipe: [ remove_highres_outliers_absolute_limits ]
-    units: hPa
-    absolute_limits: [ 760, 1000 ]
+    units: kPa
+    absolute_limits: [ 76, 100 ]
 
 PPFD:
   PPFD_IN_:
