--- a/diive/pkgs/qaqc/pipes_meteo.yaml
+++ b/diive/pkgs/qaqc/pipes_meteo.yaml
@@ -15,58 +15,72 @@ D_SNOW:
   D_SNOW_:
     pipe: [ remove_highres_outliers_thymeboost, remove_highres_outliers_absolute_limits ]
     units: m
+    resampling_aggregation: mean
     absolute_limits: [ -0.1, 1.5 ]
 
 G:
-  SHFM:  # temporary entry
+  SHFM: # temporary entry
     pipe: [ remove_highres_outliers_absolute_limits ]
     units: W m-2
+    resampling_aggregation: mean
     absolute_limits: [ -100, 100 ]
 
 LW:
   LW_IN_:
     pipe: [ remove_highres_outliers_absolute_limits ]
     units: W m-2
+    resampling_aggregation: mean
     absolute_limits: [ 50, 600 ]
 
 PA:
   PA_:
     pipe: [ remove_highres_outliers_absolute_limits ]
     units: kPa
+    resampling_aggregation: mean
     absolute_limits: [ 76, 100 ]
 
 PPFD:
   PPFD_IN_:
     pipe: [ remove_radiation_zero_offset, setto_max_threshold, setto_min_threshold, remove_highres_outliers_absolute_limits ]
     units: umol m-2 s-1
+    resampling_aggregation: mean
     absolute_limits: [ 0, 4000 ]
 
 PREC:
   PREC_:
     pipe: [ remove_highres_outliers_absolute_limits ]
     units: mm
+    resampling_aggregation: sum
     absolute_limits: [ 0, 1000 ]
 
 RH:
   RH_:
     pipe: [ remove_relativehumidity_offset, setto_max_threshold, setto_min_threshold, remove_highres_outliers_absolute_limits ]
     units: "%"
+    resampling_aggregation: mean
     absolute_limits: [ 0, 100 ]
 
 SW:
   SW_IN_:
     pipe: [ remove_radiation_zero_offset, setto_max_threshold, setto_min_threshold, remove_highres_outliers_absolute_limits ]
     units: W m-2
+    resampling_aggregation: mean
     absolute_limits: [ 0, 2000 ]
 
 SWC:
   SWC_:
-    pipe: [ remove_highres_outliers_absolute_limits ]
+    pipe: [ remove_highres_outliers_zscore,
+            remove_highres_outliers_localsd,
+            remove_highres_outliers_absolute_limits ]
     units: "%"
+    resampling_aggregation: mean
     absolute_limits: [ 0, 100 ]
 
 TA:
   TA_:
-    pipe: [ remove_highres_outliers_thymeboost, remove_highres_outliers_absolute_limits ]
+    pipe: [ remove_highres_outliers_zscore,
+            remove_highres_outliers_absolute_limits,
+            remove_highres_outliers_thymeboost ]
     units: degC
+    resampling_aggregation: mean
     absolute_limits: [ -50, 50 ]
