--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,25 @@
 [tool.poetry]
 name = "diive"
-version = "0.45.0"
+version = "0.46.0"
 description = "Time series post-processing and analysis"
-authors = ["Lukas Hörtnagl <holukas@ethz.ch>"]
+authors = ["holukas <lukas.hoertnagl@usys.ethz.ch>"]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.11"
-pandas = "^1.3.5"
-scipy = "^1.7.3"
+pandas = "^1.5.3"
+scipy = "^1.10.0"
+scikit-learn = "^1.2.0"
+matplotlib = "^3.6.3"
 PyYAML = "^6.0"
-matplotlib = "^3.5.1"
-uncertainties = "^3.1.6"
-statsmodels = "^0.13.1"
+uncertainties = "^3.1.7"
+statsmodels = "0.13.1"
 pysolar = "^0.10"
-scikit-learn = "^1.0.2"
-ThymeBoost = "^0.1.10"
-jupyterlab = "^3.5.1"
+ThymeBoost = "^0.1.15"
+jupyterlab = "^3.5.2"
+prophet = "^1.1.2"
 
 [tool.poetry.dev-dependencies]
 dbc-influxdb = { path = "../../22 - POET/dbc-influxdb", develop = true }
-Sphinx = "^4.3.2"
-sphinx-rtd-theme = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
