Stepwise meteoscreening from database

--- a/diive/pkgs/qaqc/pipes_meteo.yaml
+++ b/diive/pkgs/qaqc/pipes_meteo.yaml
@@ -91,6 +91,7 @@ SWC:
 TA:
   TA_:
     pipe: [
+      remove_highres_outliers_incremental_zscore,
       remove_highres_outliers_stl,
       remove_highres_outliers_zscore,
       remove_highres_outliers_absolute_limits,
