--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "diive"
-version = "0.52.2"
+version = "0.52.3"
 description = "Time series post-processing and analysis"
 authors = ["holukas <lukas.hoertnagl@usys.ethz.ch>"]
 
@@ -18,6 +18,7 @@ ThymeBoost = "^0.1.15"
 prophet = "^1.1.2"
 fitter = "^1.5.2"
 seaborn = "^0.12.2"
+bokeh = "^3.0.3"
 
 [tool.poetry.dev-dependencies]
 dbc-influxdb = { path = "../../22 - POET/dbc-influxdb", develop = true }
