Read zipped files directly

--- a/diive/configs/filetypes/DIIVE_CSV_30MIN.yml
+++ b/diive/configs/filetypes/DIIVE_CSV_30MIN.yml
@@ -5,7 +5,7 @@ GENERAL:
 
 FILE:
   EXTENSION: "*.diive.csv"
-  COMPRESSION: "none"
+  COMPRESSION: "None"
 
 TIMESTAMP:
   DESCRIPTION: "1 column with full timestamp with seconds"
