--- a/diive/configs/filetypes/EDDYPRO_FULL_OUTPUT_30MIN.yml
+++ b/diive/configs/filetypes/EDDYPRO_FULL_OUTPUT_30MIN.yml
@@ -5,7 +5,7 @@ GENERAL:
 
 FILE:
   EXTENSION: "*.csv"
-  COMPRESSION: "none"
+  COMPRESSION: "None"
 
 TIMESTAMP:
   DESCRIPTION: "2 columns, date and time in separate columns, time without seconds"
