--- a/diive/configs/filetypes/REDDYPROC_30MIN.yml
+++ b/diive/configs/filetypes/REDDYPROC_30MIN.yml
@@ -5,7 +5,7 @@ GENERAL:
 
 FILE:
   EXTENSION: "*.csv"
-  COMPRESSION: "none"
+  COMPRESSION: "None"
 
 TIMESTAMP:
   DESCRIPTION: "1 column, full timestamp with seconds"
