--- a/diive/configs/filetypes/ICOS_H2R_CSVZIP_10S.yml
+++ b/diive/configs/filetypes/ICOS_H2R_CSVZIP_10S.yml
@@ -1,11 +1,11 @@
 GENERAL:
-  NAME: "ICOS_CSV_1MIN"
-  DESCRIPTION: "Uncompressed (not zipped) ICOS format with 1-row header and ISO timestamp."
+  NAME: "ICOS_H2R_CSVZIP_10S"
+  DESCRIPTION: "Compressed (zipped) ICOS format with 2-row header (variables, units) and ISO timestamp."
   TAGS: [ "ICOS" ]
 
 FILE:
   EXTENSION: "*.csv"
-  COMPRESSION: "None"
+  COMPRESSION: "zip"
 
 TIMESTAMP:
   DESCRIPTION: "1 column with full ISO timestamp with seconds"
@@ -14,9 +14,9 @@ TIMESTAMP:
   SHOWS_START_MIDDLE_OR_END_OF_RECORD: "end"
 
 DATA:
-  HEADER_SECTION_ROWS: [ 0 ]
+  HEADER_SECTION_ROWS: [ 0, 1 ]
   SKIP_ROWS: [  ]
-  HEADER_ROWS: [ 0 ]
+  HEADER_ROWS: [ 0, 1 ]
   NA_VALUES: [ -9999 ]
-  FREQUENCY: "1T"
+  FREQUENCY: "10S"
   DELIMITER: ","
