--- a/diive/configs/filetypes/__diive_CSV_10MIN.yml
+++ b/diive/configs/filetypes/__diive_CSV_10MIN.yml
@@ -5,7 +5,7 @@ GENERAL:
 
 FILE:
   EXTENSION: "*.diive.csv"
-  COMPRESSION: "none"
+  COMPRESSION: "None"
 
 TIMESTAMP:
   DESCRIPTION: "1 column full timestamp with seconds, shows middle of time period."
