--- a/diive/configs/filetypes/ICOS_H1R_CSVZIP_1MIN.yml
+++ b/diive/configs/filetypes/ICOS_H1R_CSVZIP_1MIN.yml
@@ -14,9 +14,9 @@ TIMESTAMP:
   SHOWS_START_MIDDLE_OR_END_OF_RECORD: "end"
 
 DATA:
-  HEADER_SECTION_ROWS: [ 0, 1 ]
+  HEADER_SECTION_ROWS: [ 0 ]
   SKIP_ROWS: [  ]
-  HEADER_ROWS: [ 0, 1 ]
+  HEADER_ROWS: [ 0 ]
   NA_VALUES: [ -9999 ]
   FREQUENCY: "1MIN"
   DELIMITER: ","
