--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "diive"
-version = "0.62.0"
-description = ""
+version = "0.63.0"
+description = "Time series processing"
 authors = ["holukas <holukas@ethz.ch>"]
 readme = "README.md"
 
@@ -23,6 +23,8 @@ bokeh = "^3.2.2"
 pyarrow = "^13.0.0"
 pymannkendall = "^1.4.3"
 yellowbrick = "^1.5"
+shap = "^0.42.1"
+eli5 = "^0.13.0"
 
 [tool.poetry.dev-dependencies]
 dbc-influxdb = { path = "../../22 - POET/dbc-influxdb", develop = true }
