--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "diive"
-version = "0.65.0"
+version = "0.66.0"
 description = "Time series processing"
 authors = ["holukas <holukas@ethz.ch>"]
 readme = "README.md"
@@ -26,12 +26,13 @@ shap = "^0.42.1"
 eli5 = "^0.13.0"
 xgboost = "^2.0.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 dbc-influxdb = { path = "../../22 - POET/dbc-influxdb", develop = true }
 jupyter-bokeh = "^3.0.5"
-
-[tool.poetry.group.dev.dependencies]
 jupyterlab = "^4.0.6"
+sphinx = "^7.2.6"
+sphinxcontrib-napoleon = "^0.7"
+sphinx-rtd-theme = "^1.3.0"
 
 [build-system]
 requires = ["poetry-core"]
