--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ jupyterlab = "^4.0.6"
 sphinx = "^7.2.6"
 sphinxcontrib-napoleon = "^0.7"
 sphinx-rtd-theme = "^1.3.0"
+ipywidgets = "^8.1.1"
 
 [build-system]
 requires = ["poetry-core"]
