Added FCH4 vs USTAR notebook

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ target/
 __manuscripts/
 __workbench/
 __todo/
+/notebooks/_scratch/
+/notebooks/Workbench/FLUXNET_CH4-N2O_Committee_WP2/data/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -114,3 +116,4 @@ venv.bak/
 /notebooks/Manuscripts/Hörtnagl et al. (2023) - NEP Penalty/
 /notebooks/Workbench/example_n2o_outlier/
 /notebooks/Workbench/FLUXNET CH4 N2O Committee WP2/data/
+/notebooks/Workbench/FLUXNET_CH4-N2O_Committee_WP2/data/
