--- a/diive/configs/filetypes/EDDYPRO-FLUXNET-30MIN.yml
+++ b/diive/configs/filetypes/EDDYPRO-FLUXNET-30MIN.yml
@@ -1,5 +1,5 @@
 GENERAL:
-  NAME: "EDDYPRO_FLUXNET_30MIN"
+  NAME: "EDDYPRO-FLUXNET-30MIN"
   DESCRIPTION: "The *_fluxnet_* file from EddyPro."
   TAGS: [ "EDDYPRO" ]
 
