--- a/diive/configs/filetypes/DIIVE-CSV-30MIN.yml
+++ b/diive/configs/filetypes/DIIVE-CSV-30MIN.yml
@@ -1,10 +1,10 @@
 GENERAL:
-  NAME: "CSV_TS-FULL-MIDDLE_30MIN"
-  DESCRIPTION: "Generic CSV format with 1-row header containing variable names and 1-column full middle timestamp."
-  TAGS: [ "GENERIC-CSV" ]
+  NAME: "DIIVE-CSV-30MIN"
+  DESCRIPTION: "Default DIIVE format with 2-row header (variable name, units) and 1-column full timestamp."
+  TAGS: [ "DIIVE" ]
 
 FILE:
-  EXTENSION: "*.csv"
+  EXTENSION: "*.diive.csv"
   COMPRESSION: "None"
 
 TIMESTAMP:
@@ -14,9 +14,9 @@ TIMESTAMP:
   SHOWS_START_MIDDLE_OR_END_OF_RECORD: "middle"
 
 DATA:
-  HEADER_SECTION_ROWS: [ 0 ]
+  HEADER_SECTION_ROWS: [ 0, 1 ]
   SKIP_ROWS: [ ]
-  HEADER_ROWS: [ 0 ]
+  HEADER_ROWS: [ 0, 1 ]
   NA_VALUES: [ -9999 ]
   FREQUENCY: "30T"
   DELIMITER: ","
