--- a/diive/configs/filetypes/ETH-SONICREAD-BICO-CSVGZ-20HZ.yml
+++ b/diive/configs/filetypes/ETH-SONICREAD-BICO-CSVGZ-20HZ.yml
@@ -1,11 +1,11 @@
 GENERAL:
-  NAME: "RECORD-DAT-20HZ"
+  NAME: "ETH-SONICREAD-BICO-CSVGZ-20HZ"
   DESCRIPTION: "TOA5 format with 4-row header including variable name and units row, and no timestamp."
-  TAGS: [ "TOA5" ]
+  TAGS: [ "sonicread", "bico" ]
 
 FILE:
-  EXTENSION: "*.dat"
-  COMPRESSION: "None"
+  EXTENSION: "*.csv"
+  COMPRESSION: "gzip"
 
 TIMESTAMP:
   DESCRIPTION: "No timestamp in files."
@@ -14,8 +14,8 @@ TIMESTAMP:
   SHOWS_START_MIDDLE_OR_END_OF_RECORD: "-not-available-"
 
 DATA:
-  HEADER_SECTION_ROWS: [ 0, 1, 2, 3 ]
-  SKIP_ROWS: [ 0, 3 ]
+  HEADER_SECTION_ROWS: [ 0, 1, 2 ]
+  SKIP_ROWS: [ 2 ]
   HEADER_ROWS: [ 0, 1 ]
   NA_VALUES: [ -9999 ]
   FREQUENCY: "50ms"
