--- a/diive/configs/filetypes/ICOS-CSV-1MIN.yml
+++ b/diive/configs/filetypes/ICOS-CSV-1MIN.yml
@@ -17,6 +17,6 @@ DATA:
   HEADER_SECTION_ROWS: [ 0 ]
   SKIP_ROWS: [  ]
   HEADER_ROWS: [ 0 ]
-  NA_VALUES: [ -9999 ]
+  NA_VALUES: [ -9999, -6999, -999, "nan", "NaN", "NAN", "NA", "inf", "-inf", "-" ]
   FREQUENCY: "1T"
   DELIMITER: ","
