--- a/diive/configs/filetypes/ETH-SONICREAD-BICO-CSVGZ-20HZ.yml
+++ b/diive/configs/filetypes/ETH-SONICREAD-BICO-CSVGZ-20HZ.yml
@@ -17,6 +17,6 @@ DATA:
   HEADER_SECTION_ROWS: [ 0, 1, 2 ]
   SKIP_ROWS: [ 2 ]
   HEADER_ROWS: [ 0, 1 ]
-  NA_VALUES: [ -9999 ]
+  NA_VALUES: [ -9999, -6999, -999, "nan", "NaN", "NAN", "NA", "inf", "-inf", "-" ]
   FREQUENCY: "50ms"
   DELIMITER: ","
