--- a/diive/configs/filetypes/GENERIC-CSV-HEADER-1ROW-TS-MIDDLE-FULL-NS-30MIN.yml
+++ b/diive/configs/filetypes/GENERIC-CSV-HEADER-1ROW-TS-MIDDLE-FULL-NS-30MIN.yml
@@ -1,6 +1,6 @@
 GENERAL:
-  NAME: "CSV-TS-FULL-MIDDLE_30MIN"
-  DESCRIPTION: "Generic CSV format with 1-row header containing variable names and 1-column full middle timestamp."
+  NAME: "GENERIC-CSV-HEADER-1ROW-TS-MIDDLE-FULL-NS-30MIN"
+  DESCRIPTION: "Generic CSV format with 1-row header containing variable names and 1-column full timestamp with nanoseconds."
   TAGS: [ "GENERIC-CSV" ]
 
 FILE:
@@ -8,9 +8,9 @@ FILE:
   COMPRESSION: "None"
 
 TIMESTAMP:
-  DESCRIPTION: "1 column with full timestamp with seconds"
+  DESCRIPTION: "1 column with full timestamp with seconds and nanoseconds"
   INDEX_COLUMN: [ 0 ]
-  DATETIME_FORMAT: "%Y-%m-%d %H:%M:%S"
+  DATETIME_FORMAT: "%Y-%m-%d %H:%M:%S.%f"
   SHOWS_START_MIDDLE_OR_END_OF_RECORD: "middle"
 
 DATA:
@@ -18,5 +18,5 @@ DATA:
   SKIP_ROWS: [ ]
   HEADER_ROWS: [ 0 ]
   NA_VALUES: [ -9999, -6999, -999, "nan", "NaN", "NAN", "NA", "inf", "-inf", "-" ]
-  FREQUENCY: "30T"
+  FREQUENCY: "50ms"
   DELIMITER: ","
