--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "diive"
-version = "0.72.0"
+version = "0.72.1"
 description = "Time series processing"
 authors = ["holukas <holukas@ethz.ch>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
-pandas = "^2.1.0"
+pandas = ">=2.1.0"
 scipy = "^1.11.2"
 scikit-learn = "^1.3.0"
 matplotlib = "^3.7.3"
