Updated freqstr in filetypes

--- a/diive/configs/filetypes/CSV-10MIN.yml
+++ b/diive/configs/filetypes/CSV-10MIN.yml
@@ -18,6 +18,6 @@ DATA:
   SKIP_ROWS: [ ]
   HEADER_ROWS: [ 0 ]
   NA_VALUES: [ -9999, -6999, -999, "nan", "NaN", "NAN", "NA", "inf", "-inf", "-" ]
-  FREQUENCY: "10T"
+  FREQUENCY: "10min"
   DELIMITER: ","
 
