--- a/diive/configs/filetypes/TOA5-DAT-1MIN-EMPTYUNITS.yml
+++ b/diive/configs/filetypes/TOA5-DAT-1MIN-EMPTYUNITS.yml
@@ -18,5 +18,5 @@ DATA:
   SKIP_ROWS: [ 0, 2, 3 ]
   HEADER_ROWS: [ 0 ]
   NA_VALUES: [ -9999, -6999, -999, "nan", "NaN", "NAN", "NA", "inf", "-inf", "-" ]
-  FREQUENCY: "1T"
+  FREQUENCY: "min"
   DELIMITER: ","
