--- a/diive/configs/filetypes/EDDYPRO-FLUXNET-CSV-30MIN.yml
+++ b/diive/configs/filetypes/EDDYPRO-FLUXNET-CSV-30MIN.yml
@@ -1,5 +1,5 @@
 GENERAL:
-  NAME: "EDDYPRO-FLUXNET-30MIN"
+  NAME: "EDDYPRO-FLUXNET-CSV-30MIN"
   DESCRIPTION: "The *_fluxnet_* file from EddyPro."
   TAGS: [ "EDDYPRO" ]
 
@@ -17,6 +17,8 @@ DATA:
   HEADER_SECTION_ROWS: [ 0 ]
   SKIP_ROWS: [ ]
   HEADER_ROWS: [ 0 ]
+  VARNAMES_ROW: 0
+  VARUNITS_ROW: "-not-available-"
   NA_VALUES: [ -9999, -6999, -999, "nan", "NaN", "NAN", "NA", "inf", "-inf", "-" ]
   FREQUENCY: "30min"
   DELIMITER: ","
