--- a/diive/configs/filetypes/EDDYPRO-FULL-OUTPUT-CSV-30MIN.yml
+++ b/diive/configs/filetypes/EDDYPRO-FULL-OUTPUT-CSV-30MIN.yml
@@ -1,5 +1,5 @@
 GENERAL:
-  NAME: "EDDYPRO-FULL-OUTPUT-30MIN"
+  NAME: "EDDYPRO-FULL-OUTPUT-CSV-30MIN"
   DESCRIPTION: "The *_full_output_* file from EddyPro."
   TAGS: [ "EDDYPRO" ]
 
@@ -9,7 +9,7 @@ FILE:
 
 TIMESTAMP:
   DESCRIPTION: "2 columns, date and time in separate columns, time without seconds"
-  INDEX_COLUMN: [ [ 'date', '[yyyy-mm-dd]' ], [ 'time', '[HH:MM]' ] ]
+  INDEX_COLUMN: [ 'date', 'time' ]
   DATETIME_FORMAT: "%Y-%m-%d %H:%M"
   SHOWS_START_MIDDLE_OR_END_OF_RECORD: "end"
 
@@ -17,6 +17,8 @@ DATA:
   HEADER_SECTION_ROWS: [ 0, 1, 2 ]
   SKIP_ROWS: [ 0 ]
   HEADER_ROWS: [ 0, 1 ]
+  VARNAMES_ROW: 0
+  VARUNITS_ROW: 1
   NA_VALUES: [ -9999, -6999, -999, "nan", "NaN", "NAN", "NA", "inf", "-inf", "-" ]
   FREQUENCY: "30min"
   DELIMITER: ","
