--- a/diive/configs/filetypes/GENERIC-CSV-HEADER-1ROW-TS-MIDDLE-FULL-NS-20HZ.yml
+++ b/diive/configs/filetypes/GENERIC-CSV-HEADER-1ROW-TS-MIDDLE-FULL-NS-20HZ.yml
@@ -17,6 +17,8 @@ DATA:
   HEADER_SECTION_ROWS: [ 0 ]
   SKIP_ROWS: [ ]
   HEADER_ROWS: [ 0 ]
+  VARNAMES_ROW: 0
+  VARUNITS_ROW: "-not-available-"
   NA_VALUES: [ -9999, -6999, -999, "nan", "NaN", "NAN", "NA", "inf", "-inf", "-" ]
   FREQUENCY: "50ms"
   DELIMITER: ","
