--- a/diive/configs/filetypes/TOA5-DAT-1MIN.yml
+++ b/diive/configs/filetypes/TOA5-DAT-1MIN.yml
@@ -17,6 +17,8 @@ DATA:
   HEADER_SECTION_ROWS: [ 0, 1, 2, 3 ]
   SKIP_ROWS: [ 0, 3 ]
   HEADER_ROWS: [ 0, 1 ]
+  VARNAMES_ROW: 0
+  VARUNITS_ROW: 1
   NA_VALUES: [ -9999, -6999, -999, "nan", "NaN", "NAN", "NA", "inf", "-inf", "-" ]
   FREQUENCY: "min"
   DELIMITER: ","
