--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ eli5 = ">=0.13.0"
 xgboost = ">=2.0.0"
 numpy = ">=1.20.0"
 dtreeviz = "^2.2.2"
+sktime = "^0.32.1"
 
 [tool.poetry.group.dev.dependencies]
 dbc-influxdb = { path = "../../22 - POET/dbc-influxdb", develop = true }
