--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ xgboost = ">=2.0.0"
 numpy = ">=1.20.0"
 dtreeviz = "^2.2.2"
 sktime = "^0.32.1"
+category-encoders = "^2.6.3"
+scikit-optimize = "^0.10.2"
 
 [tool.poetry.group.dev.dependencies]
 dbc-influxdb = { path = "../../22 - POET/dbc-influxdb", develop = true }
