--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "diive"
-version = "0.82.1"
+version = "0.83.0"
 description = "Time series processing"
 authors = ["holukas <holukas@ethz.ch>"]
 readme = "README.md"
@@ -28,6 +28,7 @@ dtreeviz = "^2.2.2"
 sktime = "^0.32.1"
 category-encoders = "^2.6.3"
 scikit-optimize = "^0.10.2"
+polars = "^1.8.1"
 
 [tool.poetry.group.dev.dependencies]
 dbc-influxdb = { path = "../../22 - POET/dbc-influxdb", develop = true }
