--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
 # Folders not needed for repo (old)
+*.parquet
 
 # e.g.: /src
 /.idea/
 /__local_folders
 /notebooks/_scratch/
 /notebooks/Workbench/FLUXNET_CH4-N2O_Committee_WP2/data/
+/notebooks/Workbench/CH-HON
+/notebooks/Workbench/CH-DAS_2023_FluxProcessingChain
+/notebooks/Workbench/prelim_fluxes
 /diive/configs/exampledata/local
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
