--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /notebooks/Workbench/CH-HON
 /notebooks/Workbench/CH-DAS_2023_FluxProcessingChain
 /notebooks/Workbench/prelim_fluxes
+/notebooks/Workbench/Comparisons
 /diive/configs/exampledata/local
 
 
