Show train/test scores during fpc

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /notebooks/Workbench/CH-DAS_2023_FluxProcessingChain
 /notebooks/Workbench/prelim_fluxes
 /notebooks/Workbench/Comparisons
+/notebooks/Workbench/mercury
 /diive/configs/exampledata/local
 
 
