--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /__local_folders
 /notebooks/_scratch/
 /notebooks/_testdata_notebooks/
+/notebooks/FluxProcessingChain/example_data
 /notebooks/Workbench/FLUXNET_CH4-N2O_Committee_WP2/data/
 /notebooks/Workbench/CH-HON
 /notebooks/Workbench/CH-DAS_2023_FluxProcessingChain
