--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@
 /notebooks/Workbench/Comparisons
 /notebooks/Workbench/mercury
 /diive/configs/exampledata/local
-
+/docs/source/*.rst
+docs
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
