--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ dependencies = [
     "polars (>=1.26.0,<2.0.0)",
     "jupyterlab (>=4.3.6,<5.0.0)",
     "jupyter-bokeh (>=4.0.5,<5.0.0)",
-    "shap (>=0.48.0,<0.49.0)"
+    "shap (>=0.48.0,<0.49.0)",
+    "shapiq (>=1.3.1,<2.0.0)"
 ]
 
 
